# schemata-cpp

./: CMakeLists.txt  README.md
.github/workflows/: test.yml  update-schemas.yml
include/schemata/: schemas_data.hpp  schemata.hpp
scripts/: generate_schemas_data.py
src/: schemata.cpp
tests/: test_registry.cpp
